[gd_scene load_steps=10 format=3 uid="uid://crk6qe46nhlj1"]

[ext_resource type="Script" path="res://entities/entities_script/turret.gd" id="1_h6hpn"]
[ext_resource type="Script" path="res://entities/entities_script/BulletRes.gd" id="2_ox7x8"]
[ext_resource type="Script" path="res://resources/PolygonBody.gd" id="2_ykwhd"]

[sub_resource type="Resource" id="Resource_gifhx"]
resource_local_to_scene = true
script = ExtResource("2_ox7x8")
ignore_sender = false
max_speed = 15.0
move_speed = 2.5
turn_speed = 10.0
target_position = Vector2(0, 0)
damage = 1.0
maniability = 0.25
nano = 10
global_position = Vector2(0, 0)
rotation = 0.0
velocity = Vector2(0, 0)
type = "default"

[sub_resource type="Animation" id="Animation_02q7r"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_0a6kv"]
resource_name = "death"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1.2, -0.25, 0, 0.25, 0, 1e-05, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.2, 0.9)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1.2, -0.25, 0, 0.25, 0, 1e-05, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.2, 0.9)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l0qmg"]
_data = {
"RESET": SubResource("Animation_02q7r"),
"death": SubResource("Animation_0a6kv")
}

[sub_resource type="Shader" id="Shader_sf3ja"]
code = "shader_type particles;

void start() {
	// Place start code here.
}

void process() {
	// Place process code here.
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hyryx"]
shader = SubResource("Shader_sf3ja")

[node name="turret" type="StaticBody2D"]
script = ExtResource("1_h6hpn")
bullet_preset = SubResource("Resource_gifhx")

[node name="sprite" type="Polygon2D" parent="."]
polygon = PackedVector2Array(-88, 1, 91, 0, 23, -76, -16, -75)
script = ExtResource("2_ykwhd")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-87, 0, 91, -1, 32, -66, 4, -8, -4, -8, -25, -64)

[node name="timer_burst" type="Timer" parent="."]
one_shot = true

[node name="timer_bullet" type="Timer" parent="."]
one_shot = true

[node name="bullet_spawn_point" type="Node2D" parent="."]
position = Vector2(0, -65)

[node name="detection" type="RayCast2D" parent="."]
position = Vector2(0, -37)

[node name="anim_player" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_l0qmg")
}

[node name="target_node" type="Node2D" parent="."]
position = Vector2(0, -41)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
process_material = SubResource("ShaderMaterial_hyryx")

[connection signal="timeout" from="timer_burst" to="." method="_on_timer_burst_timeout"]
[connection signal="timeout" from="timer_bullet" to="." method="_on_timer_bullet_timeout"]
[connection signal="animation_finished" from="anim_player" to="." method="_on_anim_player_animation_finished"]
